Almost done expect Region deletion and Update
